hphp/test/zend/good/Zend/tests/list_005.php.expectf
string(1) "f"
string(1) "o"
string(1) "o"
----
NULL
NULL
NULL
----

Fatal error: Object does not implement ArrayAccess in %s/list_005.php on line 21
